Fixing the time display/enhance checklist visibility

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -1135,6 +1135,15 @@ body {
     background-color: #0adf7f;
 } 
 
+.display-block-checklist-completeplaceholder {
+    display: inline;
+    color: rgb(205, 205, 205);
+    font-size: 22px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
 /*List - Gallery - Horizontal - Display*/
 .display-block-list-gallery-horz-holder {
     position: relative;
